[package]
name = "kactus"
description = "A simple implementation of SMTP Protocol as a temporary mail service in Rust"
version = "0.2.1"
edition = "2025"
authors = ["1neNetworks"]
repository = "https://github.com/1Ltd/kacm"
license-file = "LICENSE"
categories = ["email"]
keywords = ["smtp", "email", "mail"]
readme = "README.md"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-postgres = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
flux-types = { workspace = true }
flux-database = { workspace = true }
